<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity"
    android:background="@android:color/white">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/LoginBtn"
        android:id="@+id/Loginbutton"
        android:layout_gravity="left"
        android:layout_weight="0.10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="43dp"
        android:theme="@style/_SKDApp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LoginText"
        android:id="@+id/LognText"
        android:layout_gravity="left"
        android:layout_weight="0.09"
        android:layout_below="@+id/Loginbutton"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ScanText"
        android:id="@+id/ScanBtn"
        android:layout_alignWithParentIfMissing="false"
        android:theme="@style/_SKDApp"
        android:layout_below="@+id/LognText"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="38dp"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/syncT"
        android:id="@+id/SyncBt"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:theme="@style/_SKDApp"
        android:layout_alignRight="@+id/ScanBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offlineTx"
        android:id="@+id/OffBt"
        android:theme="@style/_SKDApp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/ScanBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />


</RelativeLayout>
